# spin2cpp

./: .gitattributes  .gitignore  .gitmodules  .hgignore  CMakeCPack.cmake  CMakeLists.txt  COPYING  COPYING.LIB  Changelog.txt  Fastspin.md  Flexspin.md  Makefile  README.fastspin  README.fastspin.md  README.md  Readme.txt  Spin2cpp.md  ast.c  ast.h  cmdline.c  cmdline.h  cse.c  expr.c  expr.h  fastspin.c  flexbuf.c  flexbuf.h  flexcc.c  flexspin.c  functions.c  instr.h  ir.h  lexer.c  lexer.h  loops.c  optokens.h  outasm.c  outcpp.c  outdat.c  p1ir.c  (+16 more)
.github/: FUNDING.yml
.github/workflows/: build_n_test.yml  c-cpp.yml  release.yml
CMakeModules/: Toolchain-arm-linux.cmake
Demo/: Count.spin  Fibo.spin  FullDuplexSerial.spin  Hello.spin  Makefile  TrivialSerial.spin  echo.b  led.spin
Demo/Float/: .gitignore  F32.spin  Float32Full.spin  FloatMath.spin  FloatMathSimple.spin  FloatNative.hh  Makefile  demo_F32.spin  results.txt  time.spin  time2.spin  time2_cog.spin
Demo/cogobj/: .gitignore  Fibo.spin  Makefile  SimpleSerial.spin  blink1.spin  blink2.spin  blink7.spin  blinker.spin  demo.spin  fibodemo.spin
Lib/: FullDuplexSerial.spin  SimpleSerial.spin  SmartSerial.spin2
Test/: .gitignore  CMakeErrorTester.cmake  CMakeIntegrationTester.cmake  CMakeLists.txt  CMakeRuntimeTester.cmake  Fibo.p2asm  FullDuplexSerial.spin  absaddr.spin2  align.spin2  all_cogs_blink.p2asm  all_cogs_blink.spin2  arrobj.spin  asmtests.sh  basexec01.bas  basexec02.bas  basexec03.bas  basexec04.bas  basexec05.bas  basexec06.bas  basexec06.txt  basexec07.bas  bctest001.spin  bctest002.spin  bctest003.spin  bctest004.spin  bctest005.spin  bctests.sh  bftest01.b  bigarg.p2asm  bigarg.spin2  bigrdlong.spin2  bin_callpa.spin2  bin_data.spin2  bin_ditto.spin2  bin_fvar.spin2  bin_imm.spin2  bin_instr.spin2  bin_instrop.spin2  bin_jmp.spin2  bin_jmp2.spin2  (+605 more)
Test/Expect/: basexec01.txt  basexec02.txt  basexec03.txt  basexec04.txt  basexec05.txt  basexec06.txt  basexec07.txt  bctest001.lst  bctest002.lst  bctest003.lst  bctest004.lst  bctest005.lst  btest001.cpp  btest001.h  btest001_bas.cpp  btest001_bas.h  btest002.cpp  btest002.h  btest002_bas.cpp  btest003.cpp  btest003.h  btest003_bas.cpp  btest003_bas.h  btest004.cpp  btest004.h  btest004_bas.cpp  btest004_bas.h  btest005.cpp  btest005_bas.cpp  btest005_bas.h  btest006.cpp  btest006.h  btest006_bas.cpp  btest007.cpp  btest007.h  cexec01.txt  cexec02.txt  cexec03.txt  cexec04.txt  cexec05.txt  (+913 more)
Test/sub/: cexec01.hh  iface.spin2  incdec1.spin2
backends/: bcbuffers.c  bcbuffers.h  becommon.c  becommon.h  brkdebug.c
backends/asm/: asm_peep.c  assemble_ir.c  compress_ir.c  inlineasm.c  ir.h  optimize_ir.c  outasm.c  outasm.h  p1ir.c
backends/bytecode/: bc_bedata.h  bc_spin1.c  bc_spin1.h  bcbuffers.c  bcbuffers.h  bcir.c  bcir.h  bytecode.c  bytecode.h  outbc.c  outbc.h  stackir.h
backends/compress/: compress.c  compress.h
backends/cpp/: cppbuiltin.c  cppexpr.c  cppfunc.c  cppfunc.h  outcpp.c  outcpp.h  outdat.c  outgas.c
backends/dat/: outdat.c  outlst.c
backends/ir/: ir.h  optimize_ir.c  outasm.c  p1ir.c
backends/nucode/: nucode.txt  nuir.c  nuir.h  nupeep.c  outnu.c  outnu.h
backends/objfile/: outobj.c
backends/zip/: miniz.h  outzip.c
doc/: Optimization.md  SpinPasmIntegration.md  TODO.md  basic.md  basic_tutorial.md  c.md  general.md  pasm_code.md  spin.md
doc/basic_tutorial/: doloop.bas  functional.bas  lambda.bas  oldschool.bas  subroutine.bas  xor.bas
docs/: Incompatibiity.md  Optimization.md  SpinPasmIntegration.md  TODO.md  basic.md  c.md  spin.md
frontends/: case.c  common.c  common.h  hloptimize.c  hltransform.c  lexer.c  lexer.h  printdebug.c  types.c  uni2sjis.c
frontends/basic/: basic.y  basiclang.c
frontends/bf/: bflang.c
frontends/c/: cgram.l  cgram.y  clang.c
frontends/spin/: lexer.c  lexer.h  spin.y  spinlang.c
include/: assert.h  classic.bi  cog.h  compiler.h  ctype.h  dir.bi  dirent.h  errno.h  fcntl.h  fenv.h  float.h  grp.h  inttypes.h  libc.spin2  limits.h  locale.h  math.h  memory.h  propeller.h  propeller1.h  propeller2.h  pwd.h  setjmp.h  signal.h  simplei2c.h  simpletools.h  smartpins.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h  utime.h  wchar.h  wctype.h
include/libsimplei2c/: simplei2c.c
include/libsimpletext/: doscanf.c  getStr.c  safe_gets.c  scan.c  scanf_getl.c  simpletext.h
include/libsimpletools/: cogend.c  cognum.c  cogrun.c  constrainFloat.c  constrainInt.c  count.c  dac.c  eeprom_getByte.c  eeprom_getFloat.c  eeprom_getInt.c  eeprom_getStr.c  eeprom_init.c  eeprom_initSclDrive.c  eeprom_putByte.c  eeprom_putFloat.c  eeprom_putInt.c  eeprom_putStr.c  endianSwap.c  freqout.c  getDirection.c  getDirections.c  getOutput.c  getOutputs.c  getStates.c  i2c_busy.c  i2c_in.c  i2c_init.c  i2c_out.c  input.c  mapFloat.c  mapInt.c  pulseIn.c  pulseOut.c  pwm.c  random.c  rcTime.c  setDirections.c  setOutputs.c  shiftIn.c  shiftOut.c  (+1 more)
include/libsys/: argv.c  basic_dir.c  basicfmt.c  dir.bas  (+30 more)
libtool/: libtool.c  libtool.h
mcpp/: configed.H  directive.c  expand.c  internal.H  mbchar.c  mcpp_eval.c  mcpp_lib.h  mcpp_main.c  mcpp_support.c  mcpp_system.c  system.H
propeller-load/: propeller-load
spinconvert/: .#spinconvert.tcl  README.txt  spinconvert.tcl
sys/: bytecode_rom.spin  bytecode_rom.spin.h  common.spin  common.spin.h  common_pasm.spin  common_pasm.spin.h  float.spin  float.spin.h  gc_bytecode.spin  gc_bytecode.spin.h  gc_pasm.spin  gc_pasm.spin.h  gcalloc.spin  gcalloc.spin.h  lmm_cache.spin  lmm_cache.spin.h  lmm_compress.spin  lmm_compress.spin.h  lmm_orig.spin  lmm_orig.spin.h  lmm_slow.spin  lmm_slow.spin.h  lmm_trace.spin  lmm_trace.spin.h  math.bas  nucode_util.spin  nucode_util.spin.h  nuinterp.spin  nuinterp.spin.h  p1_code.spin  p1_code.spin.h  p2_brkdebug.spin  p2_brkdebug.spin.h  p2_code.spin  p2_code.spin.h  p2_lz4stub.spin  p2_lz4stub.spin.h
util/: dofmt.c  flexbuf.c  flexbuf.h  from_utf8.c  lltoa_prec.c  pool.c  pool.h  softcordic.c  softcordic.h  strdupcat.c  strrev.c  strupr.c  to_utf8.c  util.h
(+230 files in other folders)
